# python-api-tests-grafana

./: README.md  conftest.py  pyproject.toml
common/: get_test_stat.py
common/deco/: request_logger.py
fixtures/: client.py  requests.py  structure.py
fixtures/api/user/: api.py
fixtures/api/user/models/: create_user.py
fixtures/models/: client.py  response_model.py
swagger_report/: data_swagger.yaml
tests/user/: test_create_user.py
